--- a/Assainmnts/1as/index.html
+++ b/Assainmnts/1as/index.html
@@ -21,7 +21,22 @@
 </head>
 
 <body>
+    
+
     <div class="main">
+        <button class="first-btn" id="menu-btn">Menu</button>
+    <div class="menu-sec" id="menu-sec1">
+      <div class="cross" id="menu-clos"><button class="menu-btn">Close</button></div>
+      <div class="menu-bar">
+        <ul class="munu-ul">
+                    <li><a class="munu-ank" href="">Home</a></li>
+                    <li><a class="munu-ank" href="">Services</a></li>
+                    <li><a class="munu-ank" href="">Pricing</a></li>
+                    <li><a class="munu-ank" href="">Testimonials</a></li>
+                    <li ><a class="munu-ank" href="">Blog</a></li>
+        </ul>
+      </div>
+    </div>
         <div class="nav">
             <div class="logo">
                 <img class="Img-1" src="./assets/ddb3906f-d698-4213-a5aa-f65d33103928-removebg-preview.png" alt="Logo">
@@ -55,6 +70,7 @@
             <div class="heroImg">
                 <img class="Img-2" src="./assets/fabca4ab-c77e-4a46-ad26-0ddde6892f72-removebg-preview.png" alt="">
             </div>
+        </div>
         </div>
 
 
@@ -112,7 +128,7 @@
                         <i class="fa-solid fa-laptop-code fa-2x icon-4"></i>
                     </div>
                     <div class="cardText">
-                        <h4 class="Heading-5">Clean Code</h4>
+                        <h4 class="Heading-5">Clean fullCode</h4>
                         <p class="para-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam similique odio
                             eius, minima aperiam nemo facilis nam earum est eum.</p>
                     </div>
@@ -133,7 +149,7 @@
                 <div class="card">
                     <div class="cardImg">
                         <i class="fa-regular fa-folder-open fa-2x icon-6"></i>
-                        <!-- <i class="fa-solid fa-laptop-code"></i> -->
+                        
                     </div>
                     <div class="cardText">
                         <h4 class="Heading-5">Fully Secured</h4>
@@ -145,7 +161,6 @@
                 <div class="card">
                     <div class="cardImg">
                         <i class="fa-solid fa-rotate-right fa-2x icon-7"></i>
-                        <!-- <i class="fa-solid fa-laptop-code"></i> -->
                     </div>
                     <div class="cardText">
                         <h4 class="Heading-5">24/7 Support</h4>
@@ -164,15 +179,15 @@
             <div class="toogle">
                 <div class="one">Added for Monthly</div>
                 <div class="box">
-                    <div class="slide"></div>
+                    <div class="slide" id="toggle_btn"></div>
                 </div>
                 <div class="two">Year</div>
             </div>
             <div class="pricePlan">
                 <div class="pp1">
-                    <div class="one-1">Start Up</div>
+                    <div class="one-1" >Start Up</div>
                     <div class="divider"></div>
-                    <div class="two-1">$10 / mo</div>
+                    <div class="two-1" id="start-up">$10 / mo</div>
                     <div class="Text">
                         <p class="para-4">Easy Customizable</p>
                         <p class="para-4">Commercial Licence</p>
@@ -185,9 +200,9 @@
                 </div>
 
                 <div class="pp1">
-                    <div class="one-1">Classic</div>
+                    <div class="one-1" >Classic</div>
                     <div class="divider"></div>
-                    <div class="two-1">$30 / mo</div>
+                    <div class="two-1" id="classic-price">$30 / mo</div>
                     <div class="Text">
                         <p class="para-4">Easy Customizable</p>
                         <p class="para-4">Commercial Licence</p>
@@ -200,9 +215,9 @@
                 </div>
 
                 <div class="pp1">
-                    <div class="one-1">Premium</div>
+                    <div class="one-1" ">Premium</div>
                     <div class="divider"></div>
-                    <div class="two-1">$49 / mo</div>
+                    <div class="two-1" id="premium-price">$49 / mo</div>
                     <div class="Text">
                         <p class="para-4">Easy Customizable</p>
                         <p class="para-4">Commercial Licence</p>
@@ -336,10 +351,10 @@
                         </p>
                     </div>
                     <div class="fIcon">
-                        <i class="fa-brands fa-twitter icon-9"></i>
-                        <i class="fa-brands fa-facebook icon-10"></i>
-                        <i class="fa-brands fa-twitch icon-11"></i>
-                        <i class="fa-brands fa-linkedin icon-12"></i>
+                        <div class="twitter"><i class="fa-brands fa-twitter icon-9"></i></div>
+                        <div class="facbook"> <i class="fa-brands fa-facebook icon-10"></i></div>
+                        <div class="twich"><i class="fa-brands fa-twitch icon-11"></i></div>
+                        <div class="linkin"><i class="fa-brands fa-linkedin icon-12"></i></div>
                     </div>
                 </div>
 
@@ -359,7 +374,7 @@
                         <h4 class="Heading-10">Usefull Links</h4>
                     </div>
                     <div class="fPara-1">
-                        <p class="para-10">Terms of Services</p>
+                        <p class="para-10">Terms  policy</p>
                         <p class="para-10">Privacy Policy</p>
                         <p class="para-10">Cookie Policy</p>
                         <p class="para-10">Contact Us</p>
@@ -370,7 +385,7 @@
                         <h4 class="Heading-10">Newsletter</h4>
                     </div>
                     <div class="fPara-1">
-                        <p class="para-10 para-11">Sign up and receive the latest news via email</p>
+                        <p class="para-10-2">Sign up and receive the latest news via email</p>
                         <div class="fInput">
                             <input class="mail" type="email" placeholder="Email Address">
                             <button class="btn-5">Send</button>
@@ -385,6 +400,11 @@
             <h5 class="Heading-11">Copyright 2021 The Codext All Rights Reserved . </h5>
         </div>
     </div>
+
+
+
+
+    <script src="./index.js"></script>
 
 </body>
 
